[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/bar/circle_fill.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/bar/circle.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/airship_info/airship_info.gd" type="Script" id=5]

[node name="airship_info" type="HBoxContainer"]
margin_right = 354.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 108 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="airship_potrait" type="MarginContainer" parent="."]
margin_right = 100.0
margin_bottom = 108.0
rect_min_size = Vector2( 100, 80 )

[node name="bg" type="NinePatchRect" parent="airship_potrait"]
margin_right = 100.0
margin_bottom = 108.0
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="NinePatchRect2" type="NinePatchRect" parent="airship_potrait"]
modulate = Color( 0.239216, 0.239216, 0.239216, 0.733333 )
margin_right = 100.0
margin_bottom = 108.0
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="icon" type="TextureRect" parent="airship_potrait"]
margin_right = 100.0
margin_bottom = 108.0
expand = true

[node name="border" type="NinePatchRect" parent="airship_potrait"]
margin_right = 100.0
margin_bottom = 108.0
texture = ExtResource( 4 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="respawn_indicator" type="TextureProgress" parent="airship_potrait"]
margin_right = 100.0
margin_bottom = 108.0
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 1 )
fill_mode = 3
tint_progress = Color( 1, 1, 1, 0.494118 )
nine_patch_stretch = true
stretch_margin_left = 32
stretch_margin_right = 32

[node name="respawn_timer" type="Timer" parent="airship_potrait"]
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 104.0
margin_right = 354.0
margin_bottom = 108.0

[node name="name" type="Label" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 40 )
size_flags_horizontal = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 2 )
text = "Airship"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 250.0
margin_bottom = 44.0

[connection signal="timeout" from="airship_potrait/respawn_timer" to="." method="_on_respawn_timer_timeout"]
